# simple_ws

./: README.md
src/simple_client/: CMakeLists.txt  README.md  package.xml
src/simple_client/include/client/: client.h
src/simple_client/launch/: client.launch
src/simple_client/src/: client.cpp  client_node.cpp
src/simple_publisher/: CMakeLists.txt  package.xml
src/simple_publisher/include/publisher/: publisher.h
src/simple_publisher/src/: publisher.cpp  publisher_node.cpp
src/simple_publisher_custom_msg/: CMakeLists.txt  README.md  package.xml
src/simple_publisher_custom_msg/include/publisher/: publisher.h
src/simple_publisher_custom_msg/launch/: publisher.launch
src/simple_publisher_custom_msg/msg/: NewMessage.msg
src/simple_publisher_custom_msg/src/: publisher.cpp  publisher_node.cpp
src/simple_service/: CMakeLists.txt  README.md  package.xml
src/simple_service/include/service/: service.h
src/simple_service/launch/: service.launch
src/simple_service/src/: service.cpp  service_node.cpp
src/simple_subscriber/: CMakeLists.txt  README.md  package.xml
src/simple_subscriber/include/subscriber/: subscriber.h
src/simple_subscriber/launch/: subscriber.launch
src/simple_subscriber/src/: subscriber.cpp  subscriber_node.cpp
src/simple_subscriber_custom_msg/: CMakeLists.txt  README.md  package.xml
src/simple_subscriber_custom_msg/include/subscriber/: subscriber.h
src/simple_subscriber_custom_msg/launch/: subscriber.launch
src/simple_subscriber_custom_msg/src/: subscriber.cpp
