<?xml version="1.0"?>
<package format="2">
  <name>simple_subscriber_custom_msg</name>
  <version>0.0.0</version>
  <description>The simple_subscriber_custom_msg package</description>

  <maintainer email="andrea.pupa@unimore.it">Andrea Pupa</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>simple_publisher_custom_msg</depend>

</package>
